--- a/.gitignore
+++ b/.gitignore
@@ -107,7 +107,7 @@ dist
 # vuepress v2.x temp and cache directory
 .temp
 
-# Docusaurus cache and generated files
+# Docusaurus cache and generated file
 .docusaurus
 
 # Serverless directories
